chore: Add WithCountSlotDisplay and refactor alloy smelting display/JEI
Seems like a good time to sort out our recipes